<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">
    <TextView
        android:id="@+id/calculatorScreen"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:gravity="center|right"
        android:textColor="#000000"
        android:layout_weight="4"
        android:textSize="30sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="4">
        <Button
            android:id="@+id/clearEverything"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/clearEverything"
            android:textSize="25sp"
            android:onClick="onButtonClick"/>
        <Button
            android:id="@+id/delSomething"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/delSomething"
            android:textSize="25sp"
            android:onClick="onButtonClick"/>
        <Button
            android:id="@+id/squareRoot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/squareRoot"
            android:textSize="25sp"
            android:onClick="onButtonClick"/>
        <Button
            android:id="@+id/divisionSign"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/divisionSign"
            android:textSize="25sp"
            android:onClick="onButtonClick"/>

        <!--<ImageButton
            android:id="@+id/back"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>-->
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="4">
        <Button
            android:id="@+id/number7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/number7"
            android:textSize="25sp"
            android:onClick="onButtonClick"/>
        <Button
            android:id="@+id/number8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/number8"
            android:textSize="25sp"
            android:onClick="onButtonClick"/>
        <Button
            android:id="@+id/number9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/number9"
            android:textSize="25sp"
            android:onClick="onButtonClick"/>
        <Button
            android:id="@+id/multiplicationSign"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/multiplicationSign"
            android:textSize="25sp"
            android:onClick="onButtonClick"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="4">
        <Button
            android:id="@+id/number4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/number4"
            android:textSize="25sp"
            android:onClick="onButtonClick"/>
        <Button
            android:id="@+id/number5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/number5"
            android:textSize="25sp"
            android:onClick="onButtonClick"/>
        <Button
            android:id="@+id/number6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/number6"
            android:textSize="25sp"
            android:onClick="onButtonClick"/>
        <Button
            android:id="@+id/plusSign"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/plusSign"
            android:textSize="25sp"
            android:onClick="onButtonClick"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="4">
        <Button
            android:id="@+id/number1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/number1"
            android:textSize="25sp"
            android:onClick="onButtonClick"/>
        <Button
            android:id="@+id/number2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/number2"
            android:textSize="25sp"
            android:onClick="onButtonClick"/>
        <Button
            android:id="@+id/number3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/number3"
            android:textSize="25sp"
            android:onClick="onButtonClick"/>
        <Button
            android:id="@+id/minusSign"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/minusSign"
            android:textSize="25sp"
            android:onClick="onButtonClick"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="4">
        <Button
            android:id="@+id/plusMinus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/plusMinus"
            android:textSize="25sp"
            android:onClick="onButtonClick"/>
        <Button
            android:id="@+id/number0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/number0"
            android:textSize="25sp"
            android:onClick="onButtonClick"/>
        <Button
            android:id="@+id/commaSign"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/commaSign"
            android:textSize="25sp"
            android:onClick="onButtonClick"/>
        <Button
            android:id="@+id/equalSign"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/equalSign"
            android:textSize="25sp"
            android:onClick="onButtonClick"/>
    </LinearLayout>

    <!--
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="2">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <Button
                android:id="@+id/number0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="0"
                android:textSize="25sp"
                android:onClick="onButtonClick"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">
            <Button
                android:id="@+id/commaSign"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="."
                android:textSize="25sp"
                android:onClick="onButtonClick"/>
            <Button
                android:id="@+id/equalSign"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="="
                android:textSize="25sp"
                android:onClick="onButtonClick"/>
        </LinearLayout>
    </LinearLayout>
    -->
</LinearLayout>